--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>gobai的博客，一个使用golang的小学生</title>
+<title>gobai's blog</title>
 <meta name=renderer content="webkit">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
 <meta http-equiv=cache-control content="no-transform">
@@ -14,8 +14,8 @@
 <meta name=author content="gobai"><meta name=description content="Hugo theme even example site."><meta name=keywords content="Hugo,theme,even">
 <meta name=generator content="Hugo 0.89.2 with theme even">
 <link rel=canonical href=https://blog.gocn.top/>
-<link href=https://blog.gocn.top/index.xml rel=alternate type=application/rss+xml title=gobai的博客，一个使用golang的小学生>
-<link href=https://blog.gocn.top/index.xml rel=feed type=application/rss+xml title=gobai的博客，一个使用golang的小学生>
+<link href=https://blog.gocn.top/index.xml rel=alternate type=application/rss+xml title="gobai's blog">
+<link href=https://blog.gocn.top/index.xml rel=feed type=application/rss+xml title="gobai's blog">
 <link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
@@ -23,20 +23,20 @@
 <link rel=mask-icon href=/safari-pinned-tab.svg color=#5bbad5>
 <link href=/sass/main.min.f92fd13721ddf72129410fd8250e73152cc6f2438082b6c0208dc24ee7c13fc4.css rel=stylesheet>
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.1.20/dist/jquery.fancybox.min.css integrity="sha256-7TyXnr2YU040zfSP+rEcz29ggW4j56/ujTPwjMzyqFY=" crossorigin=anonymous>
-<meta property="og:title" content="gobai的博客，一个使用golang的小学生">
+<meta property="og:title" content="gobai's blog">
 <meta property="og:description" content="Hugo theme even example site.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://blog.gocn.top/">
-<meta itemprop=name content="gobai的博客，一个使用golang的小学生">
+<meta itemprop=name content="gobai's blog">
 <meta itemprop=description content="Hugo theme even example site."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="gobai的博客，一个使用golang的小学生">
+<meta name=twitter:title content="gobai's blog">
 <meta name=twitter:description content="Hugo theme even example site."><!--[if lte IE 9]><script src=https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js></script><![endif]--><!--[if lt IE 9]><script src=https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js></script>
 <script src=https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js></script><![endif]-->
 </head>
 <body>
 <div id=mobile-navbar class=mobile-navbar>
 <div class=mobile-header-logo>
-<a href=/ class=logo>Even</a>
+<a href=/ class=logo>gobai's blog</a>
 </div>
 <div class=mobile-navbar-icon>
 <span></span>
@@ -52,8 +52,6 @@
 <li class=mobile-menu-item>Archives</li>
 </a><a href=/tags/>
 <li class=mobile-menu-item>Tags</li>
-</a><a href=/categories/>
-<li class=mobile-menu-item>Categories</li>
 </a><a href=/about/>
 <li class=mobile-menu-item>About</li>
 </a>
@@ -62,7 +60,7 @@
 <div class=container id=mobile-panel>
 <header id=header class=header>
 <div class=logo-wrapper>
-<a href=/ class=logo>Even</a>
+<a href=/ class=logo>gobai's blog</a>
 </div>
 <nav class=site-navbar>
 <ul id=menu class=menu>
@@ -72,8 +70,6 @@
 <a class=menu-item-link href=/post/>Archives</a>
 </li><li class=menu-item>
 <a class=menu-item-link href=/tags/>Tags</a>
-</li><li class=menu-item>
-<a class=menu-item-link href=/categories/>Categories</a>
 </li><li class=menu-item>
 <a class=menu-item-link href=/about/>About</a>
 </li>
@@ -92,21 +88,8 @@
 </main>
 <footer id=footer class=footer>
 <div class=social-links>
-<a href=mailto:your@email.com class="iconfont icon-email" title=email></a>
-<a href=http://localhost:1313 class="iconfont icon-stack-overflow" title=stack-overflow></a>
-<a href=http://localhost:1313 class="iconfont icon-twitter" title=twitter></a>
-<a href=http://localhost:1313 class="iconfont icon-facebook" title=facebook></a>
-<a href=http://localhost:1313 class="iconfont icon-linkedin" title=linkedin></a>
-<a href=http://localhost:1313 class="iconfont icon-google" title=google></a>
-<a href=http://localhost:1313 class="iconfont icon-github" title=github></a>
-<a href=http://localhost:1313 class="iconfont icon-weibo" title=weibo></a>
-<a href=http://localhost:1313 class="iconfont icon-zhihu" title=zhihu></a>
-<a href=http://localhost:1313 class="iconfont icon-douban" title=douban></a>
-<a href=http://localhost:1313 class="iconfont icon-pocket" title=pocket></a>
-<a href=http://localhost:1313 class="iconfont icon-tumblr" title=tumblr></a>
-<a href=http://localhost:1313 class="iconfont icon-instagram" title=instagram></a>
-<a href=http://localhost:1313 class="iconfont icon-gitlab" title=gitlab></a>
-<a href=http://localhost:1313 class="iconfont icon-bilibili" title=bilibili></a>
+<a href=mailto:599500688@qq.com class="iconfont icon-email" title=email></a>
+<a href=https://github.com/wolibo class="iconfont icon-github" title=github></a>
 <a href=https://blog.gocn.top/index.xml type=application/rss+xml class="iconfont icon-rss" title=rss></a>
 </div>
 <div class=copyright>
