--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <meta name=apple-mobile-web-app-status-bar-style content="#f8f5ec">
 <meta name=author content="gobai"><meta name=description content="Hugo theme even example site."><meta name=keywords content="Hugo,theme,even">
 <meta name=generator content="Hugo 0.89.2 with theme even">
-<link rel=canonical href=#ZgotmplZ>
+<link rel=canonical href=https://blog.gocn.top/404.html>
 <link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
@@ -24,7 +24,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="Hugo theme even example site.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="localhost:1313/404.html">
+<meta property="og:url" content="https://blog.gocn.top/404.html">
 <meta itemprop=name content="404 Page not found">
 <meta itemprop=description content="Hugo theme even example site."><meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
@@ -90,7 +90,7 @@
 <div class=social-links>
 <a href=mailto:599500688@qq.com class="iconfont icon-email" title=email></a>
 <a href=https://github.com/wolibo class="iconfont icon-github" title=github></a>
-<a href=#ZgotmplZ type=application/rss+xml class="iconfont icon-rss" title=rss></a>
+<a href=https://blog.gocn.top/index.xml type=application/rss+xml class="iconfont icon-rss" title=rss></a>
 </div>
 <div class=copyright>
 <span class=power-by>
