--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <meta name=apple-mobile-web-app-status-bar-style content="#f8f5ec">
 <meta name=author content="gobai"><meta name=description content="Hugo theme even example site."><meta name=keywords content="Hugo,theme,even">
 <meta name=generator content="Hugo 0.89.2 with theme even">
-<link rel=canonical href=#ZgotmplZ>
-<link href=#ZgotmplZ rel=alternate type=application/rss+xml title="gobai's blog">
-<link href=#ZgotmplZ rel=feed type=application/rss+xml title="gobai's blog">
+<link rel=canonical href=https://blog.gocn.top/>
+<link href=https://blog.gocn.top/index.xml rel=alternate type=application/rss+xml title="gobai's blog">
+<link href=https://blog.gocn.top/index.xml rel=feed type=application/rss+xml title="gobai's blog">
 <link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
@@ -26,7 +26,7 @@
 <meta property="og:title" content="gobai's blog">
 <meta property="og:description" content="Hugo theme even example site.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="localhost:1313/">
+<meta property="og:url" content="https://blog.gocn.top/">
 <meta itemprop=name content="gobai's blog">
 <meta itemprop=description content="Hugo theme even example site."><meta name=twitter:card content="summary">
 <meta name=twitter:title content="gobai's blog">
@@ -80,6 +80,22 @@
 <div class=content-wrapper>
 <div id=content class=content>
 <section id=posts class=posts>
+<article class=post>
+<header class=post-header>
+<h1 class=post-title><a class=post-link href=/post/interval-overlap-problem/>Interval Overlap Problem</a></h1>
+<div class=post-meta>
+<span class=post-time> 2021-11-10 </span>
+</div>
+</header>
+<div class=post-content>
+<div class=post-summary>
+优雅处理区间重叠问题
+</div>
+<div class=read-more>
+<a href=/post/interval-overlap-problem/ class=read-more-link>Read more...</a>
+</div>
+</div>
+</article>
 </section>
 <nav class=pagination>
 </nav>
@@ -90,7 +106,7 @@
 <div class=social-links>
 <a href=mailto:599500688@qq.com class="iconfont icon-email" title=email></a>
 <a href=https://github.com/wolibo class="iconfont icon-github" title=github></a>
-<a href=#ZgotmplZ type=application/rss+xml class="iconfont icon-rss" title=rss></a>
+<a href=https://blog.gocn.top/index.xml type=application/rss+xml class="iconfont icon-rss" title=rss></a>
 </div>
 <div class=copyright>
 <span class=power-by>
