区间重合问题 36c34af24982495ff9d6638ae4b0c85b8e166bc8

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </header>
 <div class=post-content>
 <div class=post-summary>
-优雅处理区间重叠问题 给定一个左闭右开连续区间 [L,R), 判断与另一个左闭右开连续区间是否有重合部分。 首先对于两个连续区间有重合部分的状态有四种，没重合
+给定一个左闭右开连续区间 [L,R), 判断与另一个左闭右开连续区间是否有重合部分。 首先对于两个连续区间有重合部分的状态有四种，没重合部分的状态有两种，不
 </div>
 <div class=read-more>
 <a href=/post/interval-overlap-problem/ class=read-more-link>Read more...</a>
