add utterances 47e3c36cd876d3385c3bfcf913c8f220985a62da

--- a/about/index.html
+++ b/about/index.html
@@ -97,6 +97,8 @@
 </div>
 </article>
 </div>
+<script src=https://utteranc.es/client.js repo=wolibo/blog issue-term=pathname theme=github-light crossorigin=anonymous async></script>
+<noscript>Please enable JavaScript to view the <a href=https://github.com/utterance>comments powered by utterances.</a></noscript>
 </div>
 </main>
 <footer id=footer class=footer>
