--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </header>
 <div class=post-content>
 <div class=post-summary>
-给定一个左闭右开连续区间 [L,R), 判断与另一个左闭右开连续区间是否有重合部分。 首先对于两个连续区间有重合部分的状态有四种，没重合部分的状态有两种，不
+问题描述 给定一个左闭右开连续区间 [L,R), 判断与另一个左闭右开连续区间是否有重合部分。 问题分析 首先对于两个连续区间有重合部分的状态有四种，没重合部分
 </div>
 <div class=read-more>
 <a href=/post/interval-overlap-problem/ class=read-more-link>Read more...</a>
